--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 pbr==5.5.1
 python-dotenv==0.15.0
+requests==2.25.1 
 testresources==2.0.1
 Werkzeug==1.0.1
 WTForms==2.3.3
