--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ html2text==2020.1.16
 itsdangerous==1.1.0
 Jinja2==2.11.2
 pbr==5.5.1
+psycopg2==2.8.6
 python-dotenv==0.15.0
 requests==2.25.1 
 testresources==2.0.1
